# life-v2

./: Cargo.toml  LICENSE  README.md
.zed/: settings.json
src/: lib.rs  logic.rs  main.rs  window.rs
